--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,8 +23,9 @@ html {
 }
 
 body {
-    font-family: "Norse", sans-serif;
+    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     line-height: 1.5;
+    height: 100vh;
 }
 
 h1, h2, h3, h4, h5 {
@@ -35,4 +36,54 @@ h1, h2, h3, h4, h5 {
 img {
   display: block;
   max-inline-size: 100%;
+}
+
+.main {
+    display: flex;
+    height: 100%;
+}
+
+.main .left {
+    background-image: url(../images/halie-west-25xggax4bSA-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 6rem 0 1em 0 ;
+}
+
+.main .left .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.603);
+    padding: 0.3em 0;
+    width: 100%;
+}
+
+.main .left .logo img {
+    width: 60px;
+}
+
+.main .left .logo span {
+    font-family: "Norse", sans-serif;
+    color: white;
+    font-size: 3.5rem;
+}
+
+.main .left p {
+    color: white;
+    font-style: italic;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+.main .left p a {
+    color: white;
+}
+
+.right {
+    flex: 2;
 }
